tests/code/pages/errors/arg-error-boolean.tht

q[a b c].join(true)

